--- a/PreVsPostAnalysis.Rmd
+++ b/PreVsPostAnalysis.Rmd
@@ -39,8 +39,8 @@ tagproj <- proj4string(tagprj)
 Load results from HR_analysis_GPS_LC_newtags_11July2018.Rmd. The following files contain raw data for pre and post periods.
 
 ```{r}
-post.all <- read.csv("data/files_Jul2018_withNewTags/new/Post_GPS_LC_all_2018-07-26.csv")
-pre.all <- read.csv("data/files_Jul2018_withNewTags/new/Pre_GPS_LC_all_2018-07-26.csv")
+post.all <- read.csv("data/Post_GPS_LC_all_2018-09-18.csv")
+pre.all <- read.csv("data/Pre_GPS_LC_all_2018-09-18.csv")
 
 pre.kd <- HR.analysis.step1(min_n, pre.all, tagproj, grid = 300)
 post.kd <- HR.analysis.step1(min_n, post.all, tagproj, grid = 300)
@@ -66,7 +66,14 @@ post.summary <- read.csv("data/post_sample_summary_2018-07-26.csv")
 ID.post.min_n <- filter(post.summary,
                        n.relocations > (min_n - 1))
 
-run.date <- "2018-07-26"
+pre.summary <- read.csv("data/pre_sample_summary_2018-07-26.csv")
+ID.pre.min_n <- filter(pre.summary,
+                       n.relocations > (min_n - 1))
+
+#h.multiplier <-  seq(from = 0.1, to = 0.95, by = 0.05) 
+grid <- 1000
+extent <- 1
+run.date <- "2018-09-18"
 if (!file.exists(paste0("RData/areas_combos_", run.date, ".rds"))){
   combos <- combn(1:dim(ID.post.min_n)[1], 
                   dim(ID.pre.min_n)[1])
@@ -74,40 +81,38 @@ if (!file.exists(paste0("RData/areas_combos_", run.date, ".rds"))){
                             size = 1000)]
   IDs <- ver.95.df.list <- pts.df.list <- vector(mode = "list", 
                                                  length = ncol(combos))
-  area.95 <- area.50 <- vector(mode = "numeric", 
-                               length = ncol(combos))
+  area.95 <- area.50 <- lat.N <- vector(mode = "numeric", 
+                                        length = ncol(combos))
   
   #p.list <- list()
   for (k in 1:ncol(combos)){
+    ID.post.tmp <- data.frame(ArgosID = ID.post.min_n[combos[,k], "ArgosID"])
+    post.tmp <- left_join(ID.post.tmp, post.all, by = "ArgosID")
+    post.tmp.kd <- HR.analysis.step1(min_n, 
+                                     post.tmp, 
+                                     tagproj, 
+                                     grid = grid)
+
+    h.post.tmp <- find.h.adhoc(post.tmp.kd$list.data$all.utm,
+                               grid = grid, extent = extent)
     
-    ID.post.tmp <- ID.post.min_n[combos[,k], ]
-    tmp.list <- make.HR.dataset(post.all, ID.post.tmp, tagproj)
+    h.post <- round(h.post.tmp$h)
+
+    post.HR <- compute.area(h.post, 
+                            post.tmp.kd$list.data, 
+                            grid = grid)
     
-    ###  START FROM HERE - 9/17/2018
-    tmp.kd <- HR.analysis.step1(min_n, post.all, tagproj, grid = 300)
-
-    h.tmp.1 <- find.h.adhoc(pre.kd$list.data$all.utm)
-## Section 3.1.2
-##Visually optimized hlim = c(0.565,1.5), grid=300
-# grid values from 50 to 300 don't change the outcome;
-# extent values from 1 to 200 don't change the outcome either
-
-h.pre <- round(h.pre.1$h)
-
-pre.HR <- compute.area(h.pre, 
-                       pre.kd$list.data, 
-                       grid = 300)
-    tmp.HR <- HR.bvnorm.fcn(all.utm = tmp.list$all.utm,
-                            byID.utm = tmp.list$byID.utm,
+    tmp.HR <- HR.bvnorm.fcn(all.utm = post.tmp.kd$list.data$all.utm,
+                            byID.utm = post.tmp.kd$list.data$byID.utm,
                             h = h.pre,
                             hlim=c(0.03, 1.5),
-                            grid=300, extent = 1)
+                            grid=grid, extent = extent)
     
     ver.95.df.list <- broom::tidy(spTransform(getverticeshr(tmp.HR$all.kd, 95),
                                               CRS("+proj=longlat")))
     
-    pts.df.list <- data.frame(lon = tmp.list$all.coords@coords[,1],
-                              lat = tmp.list$all.coords@coords[,2])
+    pts.df.list <- data.frame(lon = post.tmp.kd$list.data$all.coords@coords[,1],
+                              lat = post.tmp.kd$list.data$all.coords@coords[,2])
     
     # p.list[[k]] <- ggplot() +
     #   geom_polygon(data = tmp.df, aes(x = long, y = lat, group = group)) +
@@ -116,15 +121,18 @@ pre.HR <- compute.area(h.pre,
     
     area.50[k] <- tmp.HR$area.all["50"]
     area.95[k] <- tmp.HR$area.all["95"]
+    lat.N[k] <- max(ver.95.df.list$lat)
     
     IDs[[k]] <- ID.post.tmp[,1]
   }
   
   areas.combos <- list(area95 = area.95,
                        area50 = area.50,
+                       Nmost.area95 = lat.N,
                        ID = IDs,
                        polygon = ver.95.df.list,
-                       points = pts.df.list)
+                       points = pts.df.list,
+                       combos = combos)
   
   saveRDS(areas.combos,
           file = paste0("RData/areas_combos_", Sys.Date(), ".rds"))
