--- a/PreVsPostAnalysis.Rmd
+++ b/PreVsPostAnalysis.Rmd
@@ -16,6 +16,7 @@ library(leaflet)
 library(ggplot2)
 library(lubridate)
 library(tidyverse)
+library(ggridges)
 
 ifelse(Sys.info()[1] == 'Linux',
        source('~/Documents/R/tools/TomosFunctions.R'),
@@ -60,9 +61,19 @@ pre.HR <- compute.area(h.pre,
                        pre.kd$list.data, 
                        grid = 300)
 
+h.post.1 <- find.h.adhoc(post.kd$list.data$all.utm)
+
+h.post <- round(h.post.1$h)
+
+post.HR <- compute.area(h.post, 
+                       post.kd$list.data, 
+                       grid = 300)
+
 ```
 
-Select all possible combinations of 6 (ID.pre.min_n) individuals from the post data. There are 8008 possible combinations when min_n = 50. It takes a bit of time, I select 1000 of them. Because the sample size decreases, I use h.pre for this.
+Select all possible combinations of 5 (nrow(ID.pre.min_n) - 1) to 16 (nrow(ID.post.min_n) - 1) individuals from the post data. There are 8008 possible combinations when min_n = 50. It takes a bit of time, I select 1000 of them. All these were ran using postUD_effects_n.Rmd. Results are saved in .rds files. 
+
+First, we look at the change in computed areas as a function of sample sizes. 
 
 ```{r echo=FALSE, results="hide"}
 post.summary <- read.csv("data/post_sample_summary_2018-09-18.csv")
@@ -80,193 +91,100 @@ ID.pre.min_n <- filter(pre.summary,
 grid <- 1000
 extent <- 1
 
-if (!file.exists(paste0("RData/areas_combos_", run.date, ".rds"))){
-  combos <- combn(1:dim(ID.post.min_n)[1], 
-                  dim(ID.pre.min_n)[1])
-  combos <- combos[, sample(1:ncol(combos), 
-                            size = 1000)]
-  IDs <- ver.95.df.list <- pts.df.list <- vector(mode = "list", 
-                                                 length = ncol(combos))
-  area.95 <- area.50 <- lat.N <- vector(mode = "numeric", 
-                                        length = ncol(combos))
-  
-  #p.list <- list()
-  for (k in 1:ncol(combos)){
-    ID.post.tmp <- data.frame(ArgosID = ID.post.min_n[combos[,k], "ArgosID"])
-    post.tmp <- left_join(ID.post.tmp, post.all, by = "ArgosID")
-    post.tmp.kd <- HR.analysis.step1(min_n, 
-                                     post.tmp, 
-                                     tagproj, 
-                                     grid = grid)
+# select randomized results 
+file.names <- list.files(path = "Rdata/", pattern = "areas_combos_n")
 
-    h.post.tmp <- find.h.adhoc(post.tmp.kd$list.data$all.utm,
-                               grid = grid, extent = extent)
-    
-    h.post <- round(h.post.tmp$h)
+# initialize empty lists for collecting info
+area50.list <- area95.list <- vector(mode = "list", length = length(file.names))
+p.d50.list <- p.d95.list <- vector(mode = "list", length = length(file.names))
+Fn.50.0 <- Fn.95.0 <- vector(mode = "numeric", length = length(file.names))
 
-    post.HR <- compute.area(h.post, 
-                            post.tmp.kd$list.data, 
-                            grid = grid)
-    
-    tmp.HR <- HR.bvnorm.fcn(all.utm = post.tmp.kd$list.data$all.utm,
-                            byID.utm = post.tmp.kd$list.data$byID.utm,
-                            h = h.pre,
-                            hlim=c(0.03, 1.5),
-                            grid=grid, extent = extent)
-    
-    ver.95.df.list <- broom::tidy(spTransform(getverticeshr(tmp.HR$all.kd, 95),
-                                              CRS("+proj=longlat")))
-    
-    pts.df.list <- data.frame(lon = post.tmp.kd$list.data$all.coords@coords[,1],
-                              lat = post.tmp.kd$list.data$all.coords@coords[,2])
-    
-    # p.list[[k]] <- ggplot() +
-    #   geom_polygon(data = tmp.df, aes(x = long, y = lat, group = group)) +
-    #   geom_point(data = pts.df, aes(x = lon, y = lat),
-    #              color = "green") + coord_map()
-    
-    area.50[k] <- tmp.HR$area.all["50"]
-    area.95[k] <- tmp.HR$area.all["95"]
-    lat.N[k] <- max(ver.95.df.list$lat)
-    
-    IDs[[k]] <- ID.post.tmp[,1]
-  }
+for (k in 1:length(file.names)){
+  # find the sample size for this file:
+  n.txt <- unlist(strsplit(strsplit(strsplit(file.names[k], 
+                                             split = "areas_combos_")[[1]][2],
+                                    split = "_2018-")[[1]][1], 
+                           split = "n"))[2]
   
-  areas.combos <- list(area95 = area.95,
-                       area50 = area.50,
-                       Nmost.area95 = lat.N,
-                       ID = IDs,
-                       polygon = ver.95.df.list,
-                       points = pts.df.list,
-                       combos = combos)
+  areas.combos <- readRDS(file = paste0("Rdata/", file.names[k]))
   
-  saveRDS(areas.combos,
-          file = paste0("RData/areas_combos_", Sys.Date(), ".rds"))
+  area50.list[[as.numeric(n.txt) - 4]] <- data.frame(area50 = areas.combos$area50,
+                                                     n = as.numeric(n.txt))
+  area95.list[[as.numeric(n.txt) - 4]] <- data.frame(area95 = areas.combos$area95,
+                                                     n = as.numeric(n.txt))
   
-} else {
-  areas.combos <- readRDS(file = paste0("RData/areas_combos_", 
-                                        run.date, ".rds"))
+  dif.50.df <- data.frame(dif = areas.combos$area50 - pre.HR$area.50)
+  dif.95.df <- data.frame(dif = areas.combos$area95 - pre.HR$area.95)
+  
+  p.d50.list[[as.numeric(n.txt) - 4]] <- ggplot(data = dif.50.df) + 
+    geom_histogram(aes(x = dif), binwidth = 0.1) +
+    labs(title = paste0("n = ", n.txt), 
+         x = "Difference in area (50%)", y = "Count")
+  
+  # find the ecdf of the differences
+  Fn.50 <- ecdf(dif.50.df$dif)
+  
+  # compute the probability at 0:
+  Fn.50.0[as.numeric(n.txt) - 4] <- Fn.50(0)
+  
+  #plot(hist.dif.50)
+  
+  p.d95.list[[as.numeric(n.txt) - 4]] <- ggplot(data = dif.95.df) + 
+    geom_histogram(aes(x = dif), binwidth = 0.15) +
+    labs(title = paste0("n = ", n.txt), 
+         x = "Difference in area (95%)", y = "Count")
+  
+  # find the ecdf of the differences
+  Fn.95 <- ecdf(dif.95.df$dif)
+  
+  # compute the probability at 0:
+  Fn.95.0[as.numeric(n.txt) - 4] <- Fn.95(0)
+  
 }
 
-```
-
-Compare the randomized areas and the pre area or plot the difference between the pre area and the randomized post areas.
-```{r}
-dif.50.df <- data.frame(dif = areas.combos$area50 - pre.HR$area.50)
-dif.95.df <- data.frame(dif = areas.combos$area95 - pre.HR$area.95)
-
-hist.dif.50 <- ggplot(data = dif.50.df) + 
-  geom_histogram(aes(x = dif), binwidth = 0.1) +
-  labs(x = "Difference in area", y = "Count")
-
-# find the ecdf of the differences
-Fn.50 <- ecdf(dif.50.df$dif)
-
-# compute the probability at 0:
-Fn.50.0 <- Fn.50(0)
-
-#plot(hist.dif.50)
-
-hist.dif.95 <- ggplot(data = dif.95.df) + 
-  geom_histogram(aes(x = dif), binwidth = 0.15) +
-  labs(x = "Difference in area", y = "Count")
-
-# find the ecdf of the differences
-Fn.95 <- ecdf(dif.95.df$dif)
-
-# compute the probability at 0:
-Fn.95.0 <- Fn.95(0)
-
-#plot(hist.dif.95)
-
-# quantile(dif.50.df$dif, c(0.025, 0.05, 0.10, 0.15, 0.50, 0.975))
-#quantile(dif.95.df$dif, c(0.025, 0.05, 0.10, 0.15, 0.50, 0.975))
-# 
-# dif.50.df %>% count(dif>0)
-# 
-# dif.95.df %>% count(dif > 0)
-
 
 ```
 
-THE FOLLOWING PARAGRAPH NEEDS TO BE CLARIFIED... CONFUSING...
-The 95 percentiles of 95% UDs ranged from ```r signif(quantile(areas.combo$area95, 0.025), 3)``` to ```r signif(quantile(areas.combo$area95, 0.975), 3)``` when using six turtles at a time. The computed 95% UD for the pre dataset was ```r signif(post.HR$area.95, 3)```, which was about ```r signif(Fn.95(signif(post.HR$area.95, 3))) * 100``` percentile of UDs for the post dataset. This indicated the UDs increased from the pre to post periods. 
 
-Another thing I should do is to look at how many individuals would be needed to stabilize the computed UDs. So, using the larger dataset (post), I should randomly draw n individuals, compute UDs, and repeat the process to see how variable the UDs are. Hopefully, we see the line plateaus at about six... 
+Make plots to see how the areas changed with sample sizes
 
 ```{r}
-max.n <- dim(ID.post.min_n)[1] - 1
-for (k1 in 5:max.n){
-  if (k1 != dim(ID.pre.min_n)[1]){   # this has been done already
-    if (!file.exists(paste0("RData/areas_combos_n", k1, "_", run.date2, ".rds"))){
-      combos <- combn(1:dim(ID.post.min_n)[1], k1)
-      if (ncol(combos) > 1000){
-        combos <- combos[, sample(1:ncol(combos), size = 1000)]
-      }
-      IDs <- ver.95.df.list <- pts.df.list <- vector(mode = "list", 
-                                                     length = ncol(combos))
-      area.95 <- area.50 <- lat.N <- vector(mode = "numeric", 
-                                            length = ncol(combos))
-      
-      #p.list <- list()
-      for (k in 1:ncol(combos)){
-        ID.post.tmp <- data.frame(ArgosID = ID.post.min_n[combos[,k], "ArgosID"])
-        post.tmp <- left_join(ID.post.tmp, post.all, by = "ArgosID")
-        post.tmp.kd <- HR.analysis.step1(min_n, 
-                                         post.tmp, 
-                                         tagproj, 
-                                         grid = grid)
-        
-        h.post.tmp <- find.h.adhoc(post.tmp.kd$list.data$all.utm,
-                                   grid = grid, extent = extent)
-        
-        h.post <- round(h.post.tmp$h)
-        
-        post.HR <- compute.area(h.post, 
-                                post.tmp.kd$list.data, 
-                                grid = grid)
-        
-        tmp.HR <- HR.bvnorm.fcn(all.utm = post.tmp.kd$list.data$all.utm,
-                                byID.utm = post.tmp.kd$list.data$byID.utm,
-                                h = h.pre,
-                                hlim=c(0.03, 1.5),
-                                grid=grid, extent = extent)
-        
-        ver.95.df.list <- broom::tidy(spTransform(getverticeshr(tmp.HR$all.kd, 95),
-                                                  CRS("+proj=longlat")))
-        
-        pts.df.list <- data.frame(lon = post.tmp.kd$list.data$all.coords@coords[,1],
-                                  lat = post.tmp.kd$list.data$all.coords@coords[,2])
-        
-        # p.list[[k]] <- ggplot() +
-        #   geom_polygon(data = tmp.df, aes(x = long, y = lat, group = group)) +
-        #   geom_point(data = pts.df, aes(x = lon, y = lat),
-        #              color = "green") + coord_map()
-        
-        area.50[k] <- tmp.HR$area.all["50"]
-        area.95[k] <- tmp.HR$area.all["95"]
-        lat.N[k] <- max(ver.95.df.list$lat)
-        
-        IDs[[k]] <- ID.post.tmp[,1]
-      }
-      
-      areas.combos <- list(area95 = area.95,
-                           area50 = area.50,
-                           Nmost.area95 = lat.N,
-                           ID = IDs,
-                           polygon = ver.95.df.list,
-                           points = pts.df.list,
-                           combos = combos)
-      
-      saveRDS(areas.combos,
-              file = paste0("RData/areas_combos_n", k1, "_", 
-                            Sys.Date(), ".rds"))
-    }
-    
-  }
+area50.df <- do.call(rbind, area50.list)
+area95.df <- do.call(rbind, area95.list)
+
+pre.df <- data.frame(n = c(6, 6), 
+                     areas = c(pre.HR$area.50, pre.HR$area.95))
+
+post.df <- data.frame(n = c(17, 17), 
+                     areas = c(post.HR$area.50, post.HR$area.95))
+ 
+ggplot() + 
+  geom_point(data = area50.df,
+             aes(x = n, y = area50)) + 
+  geom_point(data = area50.df,
+             aes(x = n, y = mean(area50)),
+             size = 4.5) + 
+  geom_point(data = area95.df,
+             aes(x = n, y = area95)) + 
+  geom_point(data = area95.df,
+             aes(x = n, y = mean(area95)),
+             size = 4.5) + 
+  geom_point(data = pre.df,
+             aes(x = n, y = areas),
+             color = "green",
+             size = 3.5) + 
+  geom_hline(yintercept = post.HR$area.50,
+             size = 1.5, color = "blue",
+             linetype = 2) + 
+  geom_hline(yintercept = post.HR$area.95,
+             size = 1.5, color = "blue",
+             linetype = 2) + 
   
+  labs(x = "Number of individuals",
+       y = "Estimated UDs")
   
-} 
 
 ```
+
+
 
